# esp-iot

./: .gitignore  device programming api.md  rest api.md
aggregator_connector/: .gitignore  README.md  pubspec.yaml
aggregator_connector/android/app/: build.gradle
aggregator_connector/ios/Runner/: Info.plist
aggregator_connector/ios/Runner.xcodeproj/: project.pbxproj
aggregator_connector/lib/: http_path.dart  main.dart  translate.dart
aggregator_connector/linux/: CMakeLists.txt  my_application.cc
aggregator_connector/web/: index.html  manifest.json
aggregator_connector/windows/: CMakeLists.txt
esp32/esp32-iot/: .gitignore  CMakeLists.txt  sdkconfig
esp32/esp32-iot/main/: CMakeLists.txt  main.cpp  reload_cmake.py  test.c
esp32/esp32-iot/main/api/: error.cpp  error.h  path.cpp  path.h  response.cpp  response.h
esp32/esp32-iot/main/clock/: clock.cpp  clock.h
esp32/esp32-iot/main/device/: config_response.cpp  config_response.h  data_response.cpp  data_response.h  device.cpp  device.h  device_data.cpp  device_data.h  field.h  list.cpp  list.h  paths.cpp  paths.h  response.cpp  response.h
esp32/esp32-iot/main/global/: includes.h  string_format.h  types.h
esp32/esp32-iot/main/oscillator/: dac.h  dac_dma.h  dac_example.h  dac_timer.h
esp32/esp32-iot/main/oscilloscope/: adc.cpp  adc.h  buffer.cpp  buffer.h  iterators.cpp  iterators.h  oscilloscope.cpp  oscilloscope.h  structs.h
esp32/esp32-iot/main/server/: configuration.h  data_streams.h  http_data_stream.h  server.cpp  server.h
esp32/esp32-iot/main/wifi/: ap.c  station.c
(+16 files in other folders)
